--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 
-    <meta name="Keywords" content="Gospel, livro, evangÈlico, brasil, portuguÍs, crente, capa, editora, escritor, profeta manoel bezerra, damares, literatura, literaria, pagina, escritora, e-book, facil, baixar, download, audiobook, pdf, autor, autora, autores"/>
+    <meta name="Keywords" content="Gospel, livro, evang√©lico, brasil, portugu√™s, crente, capa, editora, escritor, profeta manoel bezerra, damares, literatura, literaria, pagina, escritora, e-book, facil, baixar, download, audiobook, pdf, autor, autora, autores"/>
     <meta name="Author" content="Profeta Manoel Bezerra"/>
 <meta name="Reply-To" content="manoel@arquivocristao.com.br"/>
 <meta name="Copyright" content="Editora Unidecristo"/>
@@ -15,9 +15,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
-    <meta name="description" content="Nunca foi t„o f·cil publicar um livro"/>
+    <meta name="description" content="Nunca foi t√£o f√°cil publicar um livro"/>
 <meta property="og:title" content="Editora Unidecristo te ajuda"/>
-<meta property="og:description" content="Nunca foi t„o f·cil publicar um livro"/>
+<meta property="og:description" content="Nunca foi t√£o f√°cil publicar um livro"/>
 <meta property="og:site_name" content="Editora Unidecristo"/>
 <meta property="og:type" content="video.movie"/>
 <meta property="og:video:width" content="300"/>
@@ -27,7 +27,7 @@
 <meta property="og:image" content="http://www.livropublicado.com.br/images/logomenor.png"/>
 <meta property="twitter:card" content="player"/>
 <meta property="twitter:site" content="@editoraunidecristo"/>
-<meta property="twitter:description" content="Nunca foi t„o f·cil publicar um livro"/>
+<meta property="twitter:description" content="Nunca foi t√£o f√°cil publicar um livro"/>
 <meta property="twitter:title" content="Editora Unidecristo te ajuda"/>
 <meta property="twitter:url" content="http://www.livropublicado.com.br/"/>
 <meta property="twitter:image" content="http://www.livropublicado.com.br/images/logomenor.png"/>
@@ -39,7 +39,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 		<title>Editora Unidecristo</title>
-		<meta charset="utf-8" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -84,8 +84,8 @@
 							<p>
 			<section id="header1" class="dark">
 				<header>
-                            Aqui vocÍ poder· vÍ os livros publicados dos nossos autores. E 
-                    vai descobrir como È f·cil ser um escritor de sucesso.</header></section></p>
+                            Aqui voc√™ poder√° v√™ os livros publicados dos nossos autores. E 
+                    vai descobrir como √© f√°cil ser um escritor de sucesso.</header></section></p>
 							<p>&nbsp;</p>
 							
 						</div>
@@ -99,24 +99,24 @@
 								<h2>
 			<section id="first" class="main">
 				<header>
-                                Nunca foi t„o f·cil publicar um livro, mas se vocÍ 
-                        n„o obter ajuda caso n„o tenha condiÁıes financeiras 
-                        isso se torna muito difÌcil, por isso decidimos criar a opÁ„o 
-                        de facilitar muito mais, podemos prestar serviÁo 
-                        editorial por um preÁo irrisÛrio e parcelado, publicar 
-                        os seus livros com qualidade pelo menor preÁo, te ajudar, vender os 
+                                Nunca foi t√£o f√°cil publicar um livro, mas se voc√™ 
+                        n√£o obter ajuda caso n√£o tenha condi√ß√µes financeiras 
+                        isso se torna muito dif√≠cil, por isso decidimos criar a op√ß√£o 
+                        de facilitar muito mais, podemos prestar servi√ßo 
+                        editorial por um pre√ßo irris√≥rio e parcelado, publicar 
+                        os seus livros com qualidade pelo menor pre√ßo, te ajudar, vender os 
                         seus exemplares em nossa livraria virtual e criar um site exclusivo e gratuito 
-                        para vocÍ.</header></section></h2>
+                        para voc√™.</header></section></h2>
                         <p>
                     <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11628324/64a4545c46.jpg" width="199" height="300">
                     <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11052887/07134b6b83.jpg" alt="Resultado de imagem para deus me perdoe profeta manoel" width="212" height="300">
-                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11237954/e0f87ab7bb.jpg" alt="Resultado de imagem para livraria arquivo crist„o" width="212" height="300">
-                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11210484/7c0c3bb0cf.jpg" alt="Resultado de imagem para livraria arquivo crist„o" width="212" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11237954/e0f87ab7bb.jpg" alt="Resultado de imagem para livraria arquivo crist√£o" width="212" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11210484/7c0c3bb0cf.jpg" alt="Resultado de imagem para livraria arquivo crist√£o" width="212" height="300">
                     <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11549845/d1166ea64a.jpg" width="211" height="300">
                     <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11179799/b83cf65923.jpg" width="211" height="300"></p>
 
 								<p>Venha fazer parte do nosso grupo de autores<br />
-								logo o seu livro estar· neste espaÁo de novidades atuais.</p>
+								logo o seu livro estar√° neste espa√ßo de novidades atuais.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">
@@ -134,12 +134,12 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Tudo com super qualidade </h2>
-								<p>&nbsp;DIGITA«√O, REVIS√O, DIAGRAMA«√O E <br>
-                                FORMATA«√O, ARTE DA CAPA, TODO O PROCESSO DE <br>
-                                EDITORA«√O. TEMOS UM EDITOR ESPECIAL PARA VOC  
+								<p>&nbsp;DIGITA√á√ÉO, REVIS√ÉO, DIAGRAMA√á√ÉO E <br>
+                                FORMATA√á√ÉO, ARTE DA CAPA, TODO O PROCESSO DE <br>
+                                EDITORA√á√ÉO. TEMOS UM EDITOR ESPECIAL PARA VOC√ä 
                                 FAZER UM RASCUNHO DA CAPA ASSIM VAMOS CRIAR UMA 
                                 CAPA <br>
-                                PROFISSIONAL DO JEITO QUE VOC  QUISER COM 
+                                PROFISSIONAL DO JEITO QUE VOC√ä QUISER COM 
                                 CONTRA-CAPA E ORELHAS.</p>
 							</div>
 						</section>
@@ -149,16 +149,16 @@
 								<p>DISPONIBILIZAMOS OS LIVROS PRONTOS EM 
                                 QUALQUER CIDADE DO BRASIL, PEDIDOS A PARTIR DE 
                                 50 UNIDADES COM O MELHOR <br>
-                                PRE«O QUE PODER¡ SER PARCELADO.</p>
+                                PRE√áO QUE PODER√Å SER PARCELADO.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Divulgamos todos os nossos escritores</h2>
 								<p>PARA OS NOSSOS ESCRITORES DISPONIBILIZAMOS UM 
-                                SITE EXCLUSIVO E DE F¡CIL EDI«√O, COLOCAMOS O 
+                                SITE EXCLUSIVO E DE F√ÅCIL EDI√á√ÉO, COLOCAMOS O 
                                 SEU LIVRO EM NOSSA LIVRARIA VIRTUAL. E VAMOS 
-                                LHES AJUDAR DANDO MUITAS DICAS DE DIVULGA«√O.</p>
+                                LHES AJUDAR DANDO MUITAS DICAS DE DIVULGA√á√ÉO.</p>
 							</div>
 						</section>
 					</section>
@@ -167,33 +167,33 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>super promoÁ„o por tempo limitado: Todo o 
-                                serviÁo editorial de sua literatura + 50 livros 
-                                de atÈ 170 p·ginas</h2>
-								<p> Temos uma Super PromoÁ„o para os novos autores: Todo o 
-                        serviÁo de editoraÁ„o por R$ 1,500.00 (Mil e quinhentos 
-                        reais) e ainda vocÍ vai receber 50 exemplares do seu 
-                        prÛprio livro na sua casa quando ficar pronto presente 
+								<h2>super promo√ß√£o por tempo limitado: Todo o 
+                                servi√ßo editorial de sua literatura + 50 livros 
+                                de at√© 170 p√°ginas</h2>
+								<p> Temos uma Super Promo√ß√£o para os novos autores: Todo o 
+                        servi√ßo de editora√ß√£o por R$ 1,500.00 (Mil e quinhentos 
+                        reais) e ainda voc√™ vai receber 50 exemplares do seu 
+                        pr√≥prio livro na sua casa quando ficar pronto presente 
             da Editora Unidecristo. Estamos 
                         te oferecendo tudo isso parcelado em 3X. um deposito 
-                        banc·rio e dois boletos, parcelas de R$ 500.00 (Quinhentos 
+                        banc√°rio e dois boletos, parcelas de R$ 500.00 (Quinhentos 
                         reais).  </p>
-								<p> Temos a opÁ„o de pagamento no cart„o em atÈ 12 
-            vezes sem entrada, veja a tabela de preÁo. Para ver
+								<p> Temos a op√ß√£o de pagamento no cart√£o em at√© 12 
+            vezes sem entrada, veja a tabela de pre√ßo. Para ver
             <a href="http://www.livropublicado.com.br/tabela_de_preco.htm"></a><a target="_blank" href="http://www.livropublicado.com.br/tabela_de_preco.htm">Clique 
             aqui</a>.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Editamos:</h3>
-									<p style="text-align: center">Temos profissionais que far„o do seu 
+									<p style="text-align: center">Temos profissionais que far√£o do seu 
                                     livro a arte da beleza e entretenimento que 
                                     todos os leitores adoram.<section id="second0" class="main"><a href="#" class="image fit"><img src="https://i.snag.gy/vjwUVe.jpg" title="Capa completa livro Frases de Gaby" width="80%" height="60%" /></a></section></p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Publicamos</h3>
-									<p style="text-align: center">Livros com qualidade contendo cÛdigo de barras 
-                                    e QR. SatisfaÁ„o para vocÍ, seus leitores e 
+									<p style="text-align: center">Livros com qualidade contendo c√≥digo de barras 
+                                    e QR. Satisfa√ß√£o para voc√™, seus leitores e 
                                     facilidades para os pontos de venda.<section id="second1" class="main"><a href="#" class="image fit"><img src="https://i.snag.gy/mfHNyr.jpg" title="Capa completa Deus Me Perdoe" width="80%" height="60%" /></a></section></p>
 								</li>
 								<li class="icon fa-code">
@@ -204,24 +204,24 @@
 								</li>
 								<li class="icon fa-headphones">
 									<h3>Vendemos</h3>
-									<p style="text-align: center">Temos muitas opÁıes de venda para o seu livro nas redes sociais no site que vamos criar para te e na nossa WEB loja Livraria Arquivo 
-Crist„o.<section id="second1" class="main"><a target="_blank" href="http://livraria.arquivocristao.com.br/"><img src="https://cdn.awsli.com.br/360x1140/346/346370/banner/42a33eafee.png" width="316" height="189"></a></section></p>
+									<p style="text-align: center">Temos muitas op√ß√µes de venda para o seu livro nas redes sociais no site que vamos criar para te e na nossa WEB loja Livraria Arquivo 
+Crist√£o.<section id="second1" class="main"><a target="_blank" href="http://livraria.arquivocristao.com.br/"><img src="https://cdn.awsli.com.br/360x1140/346/346370/banner/42a33eafee.png" width="316" height="189"></a></section></p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>dizimamos</h3>
-									<p>Os serviÁos e a venda do seu livro d· 
+									<p>Os servi√ßos e a venda do seu livro d√° 
                                     direito ao dizimo nosso para a sua igreja, 
-                                    assim que vocÍ concretizar o ultimo 
+                                    assim que voc√™ concretizar o ultimo 
                                     pagamento vamos te enviar um vale de 10% 
-                                    para vocÍ entregar ao respons·vel da sua 
+                                    para voc√™ entregar ao respons√°vel da sua 
                                     igreja.</p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3>suporte</h3>
-									<p>Estaremos a disposiÁ„o para tirar duvidas 
-                                    e ajudar nas dicas de divulgaÁ„o, 
-                                    lanÁamentos e venda direta com boletos e 
-                                    cartıes, entre outras informaÁıes, por 
+									<p>Estaremos a disposi√ß√£o para tirar duvidas 
+                                    e ajudar nas dicas de divulga√ß√£o, 
+                                    lan√ßamentos e venda direta com boletos e 
+                                    cart√µes, entre outras informa√ß√µes, por 
                                     e-mail, telefone e whatsapp.</p>
 								</li>
 							</ul>
@@ -232,17 +232,17 @@ Crist„o.<section id="second1" class="main"><a target="_blank" href="http://livra
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Quer comeÁar agora?</h2>
+								<h2>Quer come√ßar agora?</h2>
 			<section id="second" class="main">
 								<section>
-									<p>  Primeiro vocÍ deve estar com o seu arquivo em DOC, DOCX, TXT, ODT, etc. Isso que dizer, digitado e em formato de texto, 
+									<p>  Primeiro voc√™ deve estar com o seu arquivo em DOC, DOCX, TXT, ODT, etc. Isso que dizer, digitado e em formato de texto, 
                                     esta 
-                                    promoÁ„o n„o est· a opÁ„o manuscrito mas podemos fazer um acordo a parte sendo o seu caso.</p>
+                                    promo√ß√£o n√£o est√° a op√ß√£o manuscrito mas podemos fazer um acordo a parte sendo o seu caso.</p>
 									<p>Depois junte este arquivo com um rascunho da capa para que possamos ter uma 
                                     ideia de como realizar a arte, aqui temos  amostras de algumas capas e caso queira usar o nosso gerador de rascunho 
-                                    vocÍ pode criar.</p>
+                                    voc√™ pode criar.</p>
 									<p>Envie tudo em uma pasta para o Profeta Manoel Bezerra pelo e-mail:&nbsp;manoel@arquivocristao.com.br e 
-                                    aguarde contato para realizaÁ„o da entrada.</section></section></p>
+                                    aguarde contato para realiza√ß√£o da entrada.</section></section></p>
 							</header>
 							<ul class="actions vertical">
 								<li>
@@ -268,7 +268,7 @@ Crist„o.<section id="second1" class="main"><a target="_blank" href="http://livra
                             <a class="icon fa-envelope-o" href="mailto:manoel@aquivocristao.com.br?subject=Contato">Email</a></span></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>deus È amor</li>
+							<li>&copy; Untitled</li><li>deus √© amor</li>
 						</ul>
 					</footer>
 
