--- a/autores.html
+++ b/autores.html
@@ -277,14 +277,19 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><span class="label">
+                            <a class="icon fa-twitter" target="_blank" href="https://twitter.com/LivrariaAudio">Twitter</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-facebook" target="_blank" href="http://www.facebook.com/EditoraUnidecristo/">Facebook</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-instagram" href="http://www.instagram.com/unidecristo/">Instagram</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-dribbble" href="https://dribbble.com/EditoraUnidecristo">Dribbble</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-envelope-o" href="mailto:manoel@aquivocristao.com.br?subject=Contato">Email</a></span></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled</li><li>deus é amor</li>
 						</ul>
 					</footer>
 
@@ -297,7 +302,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script>
-                <![endif]-->
+                                <![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
