--- a/top.htm
+++ b/top.htm
@@ -14,7 +14,7 @@
   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%">
     <tr>
       <td width="100%" align="center">
-      <img src="http://www.livropublicado.com.br/images/logotopo.png" width="280" height="74"><img border="0" src="http://pt.cooltext.com/Rendered/Cool-Text-214374081114445.png" width="280" height="74"></td>
+      <img src="http://www.livropublicado.com.br/images/logotopo.png" width="280" height="74"><img border="0" src="http://www.livropublicado.com.br/images/galeria_imagem_do_alto.png" width="280" height="74"></td>
     </tr>
   </table>
   </center>
