--- a/galeria.htm
+++ b/galeria.htm
@@ -8,15 +8,13 @@
 </head>
 
 <frameset rows="107,*">
-  <frame name="faixa" scrolling="no" noresize target="conte˙do" style="position: relative" src="top.htm">
-  <frameset cols="190,*">
-    <frame name="conte˙do" target="principal" src="imagens.htm" scrolling="auto">
-    <frame name="principal">
-  </frameset>
+  <frame name="faixa" scrolling="no" noresize target="conte√∫do" style="position: relative" src="top.htm">
+  <frameset cols="190,*"> <frame name="conte√∫do" target="principal" src="imagens.htm" scrolling="auto"> 
+  <frame name="principal" src="http://www.livropublicado.com.br/url/image52.htm"> </frameset>
   <noframes>
   <body>
 
-  <p>Esta p·gina usa quadros mas seu navegador n„o aceita quadros.</p>
+  <p>Esta p√°gina usa quadros mas seu navegador n√£o aceita quadros.</p>
 
   </body>
   </noframes>
