--- a/autores.html
+++ b/autores.html
@@ -148,7 +148,7 @@
 <div class="image">
   <p align="center">
   <a target="_blank" href="http://livraria.arquivocristao.com.br/patrocinio-do-livro-deus-me-perdoe">
-  <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/6063f9d74b.png" width="90%" height="60%"></a></div><div class="content">
+  <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/6063f9d74b.png"></a></div><div class="content">
 
 
 								<hr />
@@ -196,7 +196,7 @@
                                 para ninguém nesta vida”.</p>
                                 <p align="center">
                                 <a target="_blank" href="http://livraria.arquivocristao.com.br/livro-era-uma-vida-marvada">
-                                <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/a2f941263b.png" width="90%" height="60%"></a></p>
+                                <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/a2f941263b.png"></a></p>
 					<article id="main2">
 <section class>
 
@@ -240,6 +240,11 @@
                                 vindas do coração de Jesus para a tua vida, para 
                                 que você seja liberto, para que você tenha uma 
                                 nova historia.</p>
+							<p align="center">
+
+<img src="http://frasesdegaby.livropublicado.com.br/images/banner.png">
+</p>
+								
 
 							    <div class="titulo_subseccion" style="box-sizing: border-box; position: relative; font-family: font_lexico_regular; font-weight: bold; color: rgb(0, 0, 0); font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
                                   <h3 style="box-sizing: border-box; font-size: 1em;">
