--- a/autores.html
+++ b/autores.html
@@ -272,6 +272,23 @@
                                     mesmas modalidades que defendem o direito ao 
                                     nome.</div>
                                 </div>
+								<div align="center">
+<span style="font-size: x-large;">Deixe seus comentários:</span></div>
+<div align="center">
+</div>
+<div id="fb-root">
+</div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5&appId=345836655604854";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<br />
+<div class="fb-comments" data-colorscheme="light" data-href="http://livraria.arquivocristao.com.br/livro-frases-de-gaby" data-numposts="10" data-width="800">
+</div>
 
 								<p>&nbsp;</p>
 
