--- a/autores.html
+++ b/autores.html
@@ -287,7 +287,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <br />
-<div class="fb-comments" data-colorscheme="light" data-href="http://livraria.arquivocristao.com.br/livro-frases-de-gaby" data-numposts="10" data-width="800">
+<div class="fb-comments" data-colorscheme="light" data-href="http://www.livropublicado.com.br/" data-numposts="10" data-width="800">
 </div>
 
 								<p>&nbsp;</p>
