--- a/gerador.html
+++ b/gerador.html
@@ -254,8 +254,26 @@
 
 parabéns você criou o rascunho de sua capa envie para nos e vamos com este 
 rascunho realizar uma capa especial.</h4></h4></h4>
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Funidecristoed%2Fvideos%2F1155387854545152%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
 
 
+<div align="center">
+<span style="font-size: x-large;">Deixe seus comentários:</span></div>
+<div align="center">
+</div>
+<div id="fb-root">
+</div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5&appId=345836655604854";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<br />
+<div class="fb-comments" data-colorscheme="light" data-href="http://www.livropublicado.com.br/" data-numposts="10" data-width="800">
+</div>
 
 
 
