--- a/gerador.html
+++ b/gerador.html
@@ -244,7 +244,10 @@
                                                 <img src="http://www.livropublicado.com.br/detalhes_do_site/7.png" alt="7.png" width="352" height="184"></p>
 
 											
-											<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Funidecristoed%2Fvideos%2F1155387854545152%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+<p align="center">
+<iframe name="I1" border="0" frameborder="0" src="https://archive.org/embed/ApresentandoOGeradorDeRascunhoDeCapaParaLivro&autoplay=1">
+Seu navegador não oferece suporte para quadros entre linhas ou está configurado no momento para não exibi-los.
+</iframe></p>
 
 
 <div align="center">
