--- a/gerador.html
+++ b/gerador.html
@@ -245,9 +245,9 @@
 
 											
 <p align="center">
-<iframe name="I1" border="0" frameborder="0" src="https://archive.org/embed/ApresentandoOGeradorDeRascunhoDeCapaParaLivro&autoplay=1">
-Seu navegador não oferece suporte para quadros entre linhas ou está configurado no momento para não exibi-los.
-</iframe></p>
+<iframe name="I1" border="0" frameborder="0" src="https://archive.org/embed/ApresentandoOGeradorDeRascunhoDeCapaParaLivro&autoplay=1" width="560" height="315">
+Seu navegador não oferece suporte para quadros entre linhas ou está configurado no momento para não exibi-los.</iframe></p>
+
 
 
 <div align="center">
