--- a/autores.html
+++ b/autores.html
@@ -244,6 +244,10 @@
 
 <img src="http://frasesdegaby.livropublicado.com.br/images/banner.png">
 </p>
+								<p align="center">
+<a href="http://frasesdegaby.livropublicado.com.br/" target="_blank">
+<img src="http://1.bp.blogspot.com/-t-tMcNPMBg0/VIpf1c_N4WI/AAAAAAAAARA/iUFYKJGKT7s/s1600/BOTAO+DE+LINK-crop.png" title="Visitem o site" width="425" height="170"></a></p>
+
 								
 
 							    <div class="titulo_subseccion" style="box-sizing: border-box; position: relative; font-family: font_lexico_regular; font-weight: bold; color: rgb(0, 0, 0); font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
