--- a/autores.html
+++ b/autores.html
@@ -148,7 +148,8 @@
 <div class="image">
   <p align="center">
   <a target="_blank" href="http://livraria.arquivocristao.com.br/patrocinio-do-livro-deus-me-perdoe">
-  <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/6063f9d74b.png"></a></div><div class="content">
+  <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/6063f9d74b.png" width="100%" height="65%"></a></div><div class="content">
+
 
 
 								<hr />
