--- a/autores.html
+++ b/autores.html
@@ -197,7 +197,7 @@
                                 para ninguém nesta vida”.</p>
                                 <p align="center">
                                 <a target="_blank" href="http://livraria.arquivocristao.com.br/livro-era-uma-vida-marvada">
-                                <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/a2f941263b.png"></a></p>
+                                <img src="https://cdn.awsli.com.br/1140x1140/346/346370/banner/a2f941263b.png" width="100%" height="65%"></a></p>
 					<article id="main2">
 <section class>
 
