--- a/autores.html
+++ b/autores.html
@@ -243,7 +243,7 @@
                                 nova historia.</p>
 							<p align="center">
 
-<img src="http://frasesdegaby.livropublicado.com.br/images/banner.png">
+<img src="http://frasesdegaby.livropublicado.com.br/images/banner.png" width="65%" height="65%">
 </p>
 								<p align="center">
 <a href="http://frasesdegaby.livropublicado.com.br/" target="_blank">
