--- a/autores.html
+++ b/autores.html
@@ -243,11 +243,11 @@
                                 nova historia.</p>
 							<p align="center">
 
-<img src="http://frasesdegaby.livropublicado.com.br/images/banner.png" width="65%" height="65%">
+<img src="http://frasesdegaby.livropublicado.com.br/images/banner.png" width="80%" height="80%">
 </p>
 								<p align="center">
 <a href="http://frasesdegaby.livropublicado.com.br/" target="_blank">
-<img src="http://1.bp.blogspot.com/-t-tMcNPMBg0/VIpf1c_N4WI/AAAAAAAAARA/iUFYKJGKT7s/s1600/BOTAO+DE+LINK-crop.png" title="Visitem o site" width="425" height="170"></a></p>
+<img src="http://1.bp.blogspot.com/-t-tMcNPMBg0/VIpf1c_N4WI/AAAAAAAAARA/iUFYKJGKT7s/s1600/BOTAO+DE+LINK-crop.png" title="Visitem o site do livro Frases de Gaby" width="425" height="170"></a></p>
 
 								
 
