--- a/gerador.html
+++ b/gerador.html
@@ -122,46 +122,45 @@
 
 
 <p align="center">
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa1.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa1.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor1.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa2.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa2.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor2.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa3.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa3.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor3.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa4.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa4.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor4.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa5.htm">
-<img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor5.png" width="56" height="80"></a><a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa6.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa5.htm">
+<img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor5.png" width="56" height="80"></a><a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa6.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor6.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa7.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa7.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor7.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa8.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa8.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor8.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa9.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa9.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor9.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa10.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa10.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor10.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa11.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa11.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor11.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa12.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa12.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor12.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa13.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa13.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor13.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa14.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa14.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor14.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa15.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa15.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor15.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa16.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa16.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor16.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa17.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa17.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor17.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa18.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa18.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor18.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa19.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa19.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor19.png" width="56" height="80"></a>
-<a target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/editcap/capa20.htm">
+<a target="_blank" https://editorafacil.github.io/SeuLivro/editcap/capa1.htmeditcap/capa20.htm">
 <img src="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Mine%20fundo%20da%20capa/cor20.png" width="56" height="80"></a></p>
-
 					<article id="main3">
 						<section class="wrapper style5">
 
