--- a/editcap/capa5.htm
+++ b/editcap/capa5.htm
@@ -5,12 +5,12 @@
 <meta name="ProgId" content="FrontPage.Editor.Document">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/21023433?v=3&s=200">
-<title>Editar capa 5</title>
+<title>Editar capa 1</title>
 </head>
  
 <frameset rows="0,*" border="0">
 <frame name="header" scrolling="no" noresize target="main">
-<frame name="main" src="https://pixlr.com/editor/?s=c&image=https://goo.gl/kl1V3D&title=Rascunho%20da%20Capa%20do%20meu%20livro&exit=http://www.livropublicado.com.br/">
+<frame name="main" src="https://pixlr.com/editor/?s=c&image=https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/Fundo%20da%20capa/cor5.png&title=Rascunho%20da%20Capa%20do%20meu%20livro&exit=https://editorafacil.github.io/SeuLivro/">
 <noframes>
 <body>
  
