--- a/gerador.html
+++ b/gerador.html
@@ -217,7 +217,7 @@
                         a sua criatividade fazendo e refazendo quantas vezes 
                         querer.</p>
 						
-						            <iframe name="I1" width="100%" height="820" style="vertical-align: middle" border="0" frameborder="0" src="http://www.livropublicado.com.br/galeria.htm">
+						            <iframe name="I1" width="100%" height="820" style="vertical-align: middle" border="0" frameborder="0" src="https://editorafacil.github.io/SeuLivro/galeria.htm">
                                     </iframe>&nbsp;
 
 
