--- a/galeria.htm
+++ b/galeria.htm
@@ -10,7 +10,7 @@
 <frameset rows="107,*">
   <frame name="faixa" scrolling="no" noresize target="conteúdo" style="position: relative" src="top.htm">
   <frameset cols="190,*"> <frame name="conteúdo" target="principal" src="imagens.htm" scrolling="auto"> 
-  <frame name="principal" src="http://www.livropublicado.com.br/url/image52.htm"> </frameset>
+  <frame name="principal" src="https://editorafacil.github.io/SeuLivro/url/image52.htm"> </frameset>
   <noframes>
   <body>
 
